2003-04-03  Christopher Faylor  <cgf@redhat.com>

	* fhandler_console.cc (CONVERT_LIMIT): Use a size for the 21st century.

2003-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* external.cc (check_ntsec): Return general ntsec state on NULL
	filename.  Check wincap.is_security() additionally.

2003-04-02  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (EXTRA_OFILES): Remove debugging object.

2003-04-02  Jason Tishler <jason@tishler.net>
	    Christopher Faylor  <cgf@redhat.com>

	* external.cc (check_ntsec): New function.
	(cygwin_internal): Add CW_CHECK_NTSEC handling to call check_ntsec()
	from applications.
	* include/cygwin/version.h: Bump API minor number.
	* include/sys/cygwin.h (cygwin_getinfo_types): Add CW_CHECK_NTSEC.

2003-04-02  Christopher Faylor  <cgf@redhat.com>

	* cygthread.cc (cygthread::new): Add more defensive debugging.

2003-04-01  Pierre Humblet  <pierre.humblet@ieee.org>

	* fhandler.cc (fhandler_base::fstat): Set the uid and gid fields
	from the current effective ids.
	* fhandler_socket.cc (fhandler_socket::fstat): Keep the uid and gid set
	by fhandler_base::fstat.
	* security.cc (get_nt_attribute): Do not test wincap.has_security ().
	(get_nt_object_attribute): Ditto.
	(get_file_attribute): Add test for wincap.has_security ().
	(get_object_attribute): Ditto.

2003-04-01  Corinna Vinschen  <corinna@vinschen.de>

	* dir.cc: Change __off32_t to _off_t and __off64_t to _off64_t
	throughout.
	* fhandler.cc: Ditto.
	* fhandler.h: Ditto.
	* fhandler_clipboard.cc: Ditto.
	* fhandler_disk_file.cc: Ditto.
	* fhandler_dsp.cc: Ditto.
	* fhandler_floppy.cc: Ditto.
	* fhandler_mem.cc: Ditto.
	* fhandler_proc.cc: Ditto.
	* fhandler_process.cc: Ditto.
	* fhandler_random.cc: Ditto.
	* fhandler_registry.cc: Ditto.
	* fhandler_tape.cc: Ditto.
	* fhandler_termios.cc: Ditto.
	* fhandler_virtual.cc: Ditto.
	* fhandler_zero.cc: Ditto.
	* mmap.cc: Ditto.
	* pipe.cc: Ditto.
	* syscalls.cc: Ditto.
	* winsup.h: Ditto.
	* include/cygwin/stat.h: Ditto.